tests/health/gold/sdk/tests__number-test.toit.gold
tests/number-test.toit:264:37: error: Argument mismatch for 'parse'
Valid named arguments include '--radix'
Some overloads also allow arguments named '--on-error'
  expect-number-out-of-bounds: (int.parse "123" -1 --if-error=: throw it)  // @no-warn
                                    ^~~~~
tests/number-test.toit:265:37: error: Argument mismatch for 'parse'
Valid named arguments include '--radix'
Some overloads also allow arguments named '--on-error'
  expect-number-out-of-bounds: (int.parse "123" 0 4 --if-error=: throw it)  // @no-warn
                                    ^~~~~
tests/number-test.toit:266:34: error: Argument mismatch for 'parse'
Valid named arguments include '--radix'
Some overloads also allow arguments named '--on-error'
  expect-int-parsing-error: (int.parse "123" 0 0 --if-error=: throw it)  // @no-warn
                                 ^~~~~
tests/number-test.toit:343:25: error: Argument mismatch for 'parse'
Some overloads allow arguments named '--on-error'
  expect-equals 16 (int.parse "foo10bar" --radix=16 3 5 --if-error=: throw it)  // @no-warn
                        ^~~~~
tests/number-test.toit:344:25: error: Argument mismatch for 'parse'
Some overloads allow arguments named '--on-error'
  expect-equals 15 (int.parse "foo10bar" --radix=15 3 5 --if-error=: throw it)  // @no-warn
                        ^~~~~
tests/number-test.toit:358:25: error: Argument mismatch for 'parse'
Valid named arguments include '--radix'
Some overloads also allow arguments named '--on-error'
  expect-equals -1 (int.parse "foo0xbar" 3 5 --if-error=: -1)  // @no-warn
                        ^~~~~
tests/number-test.toit:359:25: error: Argument mismatch for 'parse'
Valid named arguments include '--radix'
Some overloads also allow arguments named '--on-error'
  expect-equals -1 (int.parse "foo0x7bar" 3 5 --if-error=: -1)  // @no-warn
                        ^~~~~
tests/number-test.toit:360:25: error: Argument mismatch for 'parse'
Valid named arguments include '--radix'
Some overloads also allow arguments named '--on-error'
  expect-equals -1 (int.parse "foo0x-7bar" 3 6 --if-error=: -1)  // @no-warn
                        ^~~~~
tests/number-test.toit:373:25: error: Argument mismatch for 'parse'
Valid named arguments include '--radix'
Some overloads also allow arguments named '--on-error'
  expect-equals -1 (int.parse "foo0bbar" 3 5 --if-error=: -1)  // @no-warn
                        ^~~~~
tests/number-test.toit:374:25: error: Argument mismatch for 'parse'
Valid named arguments include '--radix'
Some overloads also allow arguments named '--on-error'
  expect-equals -1 (int.parse "foo0b7bar" 3 5 --if-error=: -1)  // @no-warn
                        ^~~~~
tests/number-test.toit:375:25: error: Argument mismatch for 'parse'
Valid named arguments include '--radix'
Some overloads also allow arguments named '--on-error'
  expect-equals -1 (int.parse "foo0b-7bar" 3 6 --if-error=: -1)  // @no-warn
                        ^~~~~
